--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
     "next": "14.1.1",
+    "next-seo": "^6.8.0",
     "react": "^18",
     "react-dom": "^18"
   },
