--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.1",
     "next-seo": "^6.8.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@types/node": "^20",
